--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,20 +7,17 @@ body {
 }
 
 h1 {
-    font-size: 40px;
-    /* font-family: monospace; */
+    font-size: 50px;
 }   
 
 h2 {
-    font-size: 25px;
-    color: darkslategray
-    /* font-family: monospace; */
+    font-size: 30px;
+    color: darkslategray;
 }
 
 h3 {
     font-size: 18px;
-    color: gray 
-    /* font-family: monospace; */
+    color: gray;
 }
 
 header, footer {
